--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
     "ng-table": "1.0.0",
-    "angular-ui-grid": "^3.2.9"
+    "angular-ui-grid": "^3.2.9",
+    "ng-lodash": "^0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
